# gcbmwalltowall

./: .gitignore  build_wheel.bat  gcbmwalltowall.pyproj  gcbmwalltowall.sln  pyproject.toml  setup.py
docs/: config_parsing_and_defaults.xlsx  gcbmwalltowall_manual.docx
files/: settings.json
gcbmwalltowall/: project.py
gcbmwalltowall/application/: walltowall.py
gcbmwalltowall/application/command/: argbase.py  build.py  clone.py  convert.py  merge.py  prepare.py  run.py
gcbmwalltowall/builder/: casfriprojectbuilder.py  compositeprojectbuilder.py  projectbuilder.py
gcbmwalltowall/component/: attributetable.py  boundingbox.py  classifier.py  cohort.py  disturbance.py  inputdatabase.py  layer.py  preparedproject.py  project.py  rasterattributetable.py  rollback.py  tileable.py  transition.py  vectorattributetable.py
gcbmwalltowall/configuration/: configuration.py  gcbmconfigurer.py
gcbmwalltowall/converter/: layerconverter.py  projectconverter.py
gcbmwalltowall/converter/disturbance/: compositedisturbancetypemanager.py  lastpassdisturbancelayerconverter.py  mergingdisturbancelayerconverter.py  mergingtransitionconverter.py
gcbmwalltowall/project/: projectfactory.py
gcbmwalltowall/runner/: canfire.py  cbm4.py  cbmspec.py
gcbmwalltowall/util/: encoding.py  gdalhelpers.py  numba.py  path.py  rasterbound.py  rasterchunks.py  yearparser.py
test/runner/: test_canfire.py  test_cbmspec.py  test_libcbm.py
test/runner/resources/standalone/: cbm4_config.json  profiling.csv
test/runner/resources/standalone/disturbance/disturbance-partitions/: f1bacd9ec3f241ccb9cd1b397663a425-0.parquet
test/runner/resources/standalone/disturbance/disturbance-table-transitions_mortality/: 8df2f244481046aba3a315a6ee425df4-0.parquet
test/runner/resources/standalone/inventory/inventory-file-cbm_defaults/: 445c7ad6940842c0a815ad712dce39d6-0.parquet
test/runner/resources/standalone/inventory/inventory-geo_metadata/: 362539044ddf4e1cbd5c207f9bac212f-0.parquet
test/runner/resources/standalone/inventory/inventory-partitions/: 4aed058c4c0740b083b643b23761e720-0.parquet
test/runner/resources/standalone/inventory/inventory-raster_index/cohort_index=0/chunk_index=0/: ddff108d3b3d44c88f0b35e9b4dd4e3a-0.parquet
test/runner/resources/standalone/inventory/inventory-table-yield/: 85628589eb314c9d9ce154ea33727143-0.parquet
test/runner/resources/standalone/inventory/inventory-tags/: 349c6ce107ba4c3e9f3a4c553e25a4ca-0.parquet  bf6a9797dde64b688d4175914743dab2-0.parquet
test/runner/resources/standalone/inventory/inventory/cohort_index=0/chunk_index=0/: 419833bb89e847f3968a4470a53ce43d-0.parquet  a5d331bdc11341168c8ce66943933471-0.parquet
test/runner/resources/standalone/simulation/simulation-chunks/: 689931a4e1aa4e258806df685a7d6807-0.parquet
test/runner/resources/standalone/simulation/simulation-partitions/: 54d24a900f764a399cb432b3f728c3c8-0.parquet
test/runner/resources/standalone/simulation/simulation-table-disturbance_flux/timestep=2/chunk_index=0/: cf002c607ad74a228d1179a152c5fd6d-0.parquet
test/runner/resources/standalone/simulation/simulation-table-disturbance_flux/timestep=3/chunk_index=0/: 57c3fc5deeff4e088c8140a514dd4e0c-0.parquet
test/runner/resources/standalone/simulation/simulation-table-disturbance_flux/timestep=4/chunk_index=0/: 6724193c02254d73824b5bff6b572f32-0.parquet
test/runner/resources/standalone/simulation/simulation-table-disturbance_flux/timestep=5/chunk_index=0/: 658a13bf14234d359aade37922e6dcfd-0.parquet
test/runner/resources/standalone/simulation/simulation-tags/: 90b5916e849e4366b8243c5191802346-0.parquet
test/util/: yearparser_test.py
(+60 files in other folders)
