
[project]
name = "gcbmwalltowall"
version = "2.2.2"
description = "gcbmwalltowall"
classifiers = ["Programming Language :: Python :: 3"]
requires-python = ">=3.10"
dependencies = [
    "gcbminputloader",
    "mojadata",
    "openpyxl",
    "pandas",
    "spatial-inventory-rollback",
    "sqlalchemy",
    "sqlalchemy-access; platform_system == \"Windows\"",
]

[project.optional-dependencies]
cbm4 = ["cbm4", "arrow-space", "cbmspec-cbm3", "cbm_defaults"]


[project.scripts]
walltowall = "gcbmwalltowall.application.walltowall:cli"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
[tool.uv.build-backend]
module-name = "gcbmwalltowall"
module-root = "."


[tool.uv.sources]
cbm4 = { git = "https://github.com/cat-cfs/cbm4" }
arrow-space = { git = "https://github.com/cat-cfs/arrow_space" }
cbmspec-cbm3 = { git = "https://github.com/cat-cfs/cbmspec.cbm3.python" }
spatial-inventory-rollback = { git = "https://github.com/cat-cfs/spatial_inventory_rollback" }
mojadata = { git = "https://github.com/moja-global/GCBM.Data" }
gcbminputloader = { git = "https://github.com/moja-global/GCBM.InputLoader" }
cbm_defaults = { git = "https://github.com/cat-cfs/cbm_defaults/" }
